[package]
name = "flize"
version = "4.2.3"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/xacrimon/flize"
homepage = "https://github.com/xacrimon/flize"
description = "non global, configurable and fast concurrent resource reclamation"
readme = "README.md"
documentation = "https://docs.rs/flize"
keywords = ["atomic", "concurrent", "memory", "epoch", "reclamation"]
categories = ["concurrency", "algorithms", "data-structures"]

[workspace]
members = ["examples/queue", "bench", "no-std-test", "recl-test"]

[profile.bench]
lto = "fat"
codegen-units = 1

[features]
default = ["std", "fast-barrier"]
std = []
fast-barrier = ["std", "libc", "winapi", "once_cell"]

[dependencies]
tinyvec = "1.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2.77", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { version = "0.2.77", optional = true }
once_cell = { version = "1.5.2", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi"], optional = true }
