[package]
name = "flize"
version = "4.2.3"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/xacrimon/flize"
homepage = "https://github.com/xacrimon/flize"
description = "non global, configurable and fast concurrent resource reclamation"
readme = "README.md"
documentation = "https://docs.rs/flize"
keywords = ["atomic", "concurrent", "memory", "epoch", "reclamation"]
categories = ["concurrency", "algorithms", "data-structures"]

[profile.bench]
lto = "fat"
codegen-units = 1

[features]
default = ["std", "fast-barrier"]
std = []
fast-barrier = ["std", "libc", "winapi", "once_cell"]

[dependencies]
tinyvec = "1.5.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2.111", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { version = "0.2.111", optional = true }
once_cell = { version = "1.8.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi"], optional = true }

[dev-dependencies]
criterion = "0.3.5"
crossbeam-epoch = "0.9.5"
num_cpus = "1.13.0"

[[bench]]
name = "pin-flize"
harness = false

[[bench]]
name = "pin-crossbeam"
harness = false
