[package]
name = "flize"
version = "4.2.3"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/xacrimon/flize"
homepage = "https://github.com/xacrimon/flize"
description = "non global, configurable and fast concurrent resource reclamation"
readme = "README.md"
documentation = "https://docs.rs/flize"
keywords = ["atomic", "concurrent", "memory", "epoch", "reclamation"]
categories = ["concurrency", "algorithms", "data-structures"]

[profile.bench]
lto = "fat"
codegen-units = 1

[dependencies]
tinyvec = "1.5.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.111"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.111"
once_cell = "1.8.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi"] }

[dev-dependencies]
criterion = "0.3.5"
crossbeam-epoch = "0.9.5"
num_cpus = "1.13.0"

[[bench]]
name = "pin-crossbeam"
harness = false
