[package]
name = "bench"
version = "0.1.0"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"

[profile.bench]
codegen-units = 1
incremental = false

[dev-dependencies]
criterion = "0.3.3"
flize = { path = ".." }
crossbeam-epoch = "0.8.2"
num_cpus = "1.13.0"

[[bench]]
name = "pin-flize"
harness = false

[[bench]]
name = "pin-crossbeam"
harness = false
